infrastructure/api/01.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: fatmaguidara/api
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 5000
