infrastructure/api/02.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
      app: api
  ports:
  - name: express-port
    protocol: TCP
    port: 5000
    targetPort: 5000
